--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@
 
       console.log(pets[1]);
       console.log(cat.emoji);
+
+      const name = `فيصل`;
+      let age = 17;
+      console.log(`أنا${name} وعمري ${age} `);
+      console.log(age * 5);
+
+      let hobbies = [`swimming`, `reading`, `fishing`, `running`, `fighting`];
+      hobbies.push(age);
+      hobbies.unshift(age);
+      console.log(hobbies.length);
+      hobbies.pop();
+      console.log(hobbies);
+
+      let props = {
+        name: `web`,
+        best: ` java script`,
+
+        teachers: [
+          `buzlouf`,
+          `jawan`,
+          `somou aloun`,
+          `alwaleed talal`,
+          `abdulzizz alqatan`,
+          `hamad almeseri`,
+        ],
+      };
+      console.log(props.name);
+      console.log(props.teachers[0]);
     </script>
   </body>
 </html>
